--- a/example-app/package.json
+++ b/example-app/package.json
@@ -29,9 +29,12 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
+    "@tailwindcss/postcss": "^4.0.11",
     "capacitor-camera-view": "file:..",
     "ionicons": "^7.0.0",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -61,6 +64,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.5.3",
     "typescript": "~5.6.3"
   },
   "description": "An Ionic project"
