--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "eslint": "^8.57.0",
     "prettier": "^3.5.3",
     "prettier-plugin-java": "^2.6.7",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.10",
     "rimraf": "^6.0.1",
     "rollup": "^4.35.0",
     "swiftlint": "^2.0.0",
