--- a/example-app/.prettierrc
+++ b/example-app/.prettierrc
@@ -6,5 +6,6 @@
         "parser": "angular"
       }
     }
-  ]
+  ],
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
 }
