--- a/example-app/package.json
+++ b/example-app/package.json
@@ -29,12 +29,10 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.4.3",
-    "@tailwindcss/postcss": "^4.0.13",
     "capacitor-camera-view": "file:..",
     "ionicons": "^7.4.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.2",
-    "tailwindcss": "^4.0.13",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
@@ -65,6 +63,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.10",
     "typescript": "~5.8.2"
   },
   "description": "An Ionic project"
