--- a/android/build.gradle
+++ b/android/build.gradle
@@ -60,19 +60,20 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
-    implementation 'androidx.core:core-ktx:1.15.0'
-    implementation 'androidx.camera:camera-mlkit-vision:1.4.2'
+    implementation 'androidx.core:core-ktx:1.16.0'
+    implementation 'androidx.compose.material3:material3-android:1.3.2'
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
 
     // CameraX dependencies
-    def camerax_version = "1.4.1"
+    def camerax_version = "1.4.0-alpha04"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
 
     // ML Kit for barcode scanning
-    implementation "com.google.mlkit:barcode-scanning:17.2.0"
+    implementation "com.google.mlkit:barcode-scanning:17.3.0"
 }
