--- a/android/build.gradle
+++ b/android/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
 
     // CameraX dependencies
-    def camerax_version = "1.4.0-alpha04"
+    def camerax_version = "1.4.2"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
