--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Lint script
+      - name: Run Lint
         run: npm run lint
 
   verify-ios:
