build(*): enforce conventional commits

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,41 @@ on:
       - '.github/workflows/**'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   NODE_VERSION: 20
   JAVA_VERSION: 21
 
 jobs:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install commitlint
+        run: |
+          npm install conventional-changelog-conventionalcommits
+          npm install commitlint@latest
+
+      - name: Validate current commit (last commit) with commitlint
+        if: github.event_name == 'push'
+        run: npx commitlint --last --verbose
+
+      - name: Validate PR commits with commitlint
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -37,8 +66,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Lint
+      - name: Run Lint for web plfatform
         run: npm run lint
+
+      - name: Run Lint for iOS platform
+        run: npm run lint:ios
+
+      - name: Run Prettier
+        run: npm run prettier:check
 
   verify-ios:
     name: Verify iOS
