--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "verify:ios": "xcodebuild -scheme CapacitorCameraView -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
-    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
+    "lint": "npm run eslint",
+    "lint:ios": "npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
+    "prettier:check": "prettier --check \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api CameraViewPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
@@ -50,10 +52,13 @@
     "@capacitor/core": "^7.2.0",
     "@capacitor/docgen": "^0.3.0",
     "@capacitor/ios": "^7.2.0",
+    "@commitlint/config-conventional": "^19.8.1",
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
+    "commitlint": "^19.8.1",
     "eslint": "^8.57.0",
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "prettier-plugin-java": "^2.6.7",
     "prettier-plugin-organize-imports": "^4.1.0",
