--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "commitlint": "^19.8.1",
     "eslint": "^8.57.0",
     "husky": "^9.1.7",
@@ -65,6 +71,7 @@
     "prettier-plugin-packagejson": "^2.5.15",
     "rimraf": "^6.0.1",
     "rollup": "^4.41.1",
+    "semantic-release": "^24.2.5",
     "swiftlint": "^2.0.0",
     "typescript": "~4.1.5"
   },
