--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Package.swift",
     "CapacitorCameraView.podspec"
   ],
-  "author": "michaelwolz",
+  "author": "Michael Wolz",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
