--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,7 +5,7 @@
   "plugins": [
     ["@semantic-release/commit-analyzer"],
     ["@semantic-release/release-notes-generator"],
-    ["@semantic-release/changelog"],
+
     ["@semantic-release/npm"],
     ["@semantic-release/github"],
     ["@semantic-release/git", {
@@ -13,6 +13,5 @@
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }]
   ],
-  "preset": "conventionalcommits",
-  "dryRun": true
+  "preset": "conventionalcommits"
 }
