--- a/example-app/package.json
+++ b/example-app/package.json
@@ -13,58 +13,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.6",
-    "@angular/common": "^19.2.6",
-    "@angular/compiler": "^19.2.6",
-    "@angular/core": "^19.2.6",
-    "@angular/forms": "^19.2.6",
-    "@angular/platform-browser": "^19.2.6",
-    "@angular/platform-browser-dynamic": "^19.2.6",
-    "@angular/router": "^19.2.6",
-    "@capacitor/android": "^7.3.0",
+    "@angular/animations": "^20.1.2",
+    "@angular/common": "^20.1.2",
+    "@angular/compiler": "^20.1.2",
+    "@angular/core": "^20.1.2",
+    "@angular/forms": "^20.1.2",
+    "@angular/platform-browser": "^20.1.2",
+    "@angular/platform-browser-dynamic": "^20.1.2",
+    "@angular/router": "^20.1.2",
+    "@capacitor/android": "^7.4.2",
     "@capacitor/app": "7.0.1",
-    "@capacitor/core": "7.3.0",
+    "@capacitor/core": "7.4.2",
     "@capacitor/haptics": "7.0.1",
-    "@capacitor/ios": "^7.3.0",
+    "@capacitor/ios": "^7.4.2",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/angular": "^8.6.0",
+    "@ionic/angular": "^8.6.5",
     "capacitor-camera-view": "file:..",
-    "ionicons": "^8.0.9",
-    "postcss": "^8.5.4",
+    "ionicons": "^8.0.13",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.7",
     "@angular-eslint/builder": "^19.3.0",
     "@angular-eslint/eslint-plugin": "^19.3.0",
     "@angular-eslint/eslint-plugin-template": "^19.3.0",
     "@angular-eslint/schematics": "^19.3.0",
     "@angular-eslint/template-parser": "^19.3.0",
-    "@angular/cli": "^19.2.7",
-    "@angular/compiler-cli": "^19.2.6",
-    "@angular/language-service": "^19.2.6",
-    "@capacitor/cli": "7.3.0",
+    "@angular/build": "^20.1.1",
+    "@angular/cli": "^20.1.1",
+    "@angular/compiler-cli": "^20.1.2",
+    "@angular/language-service": "^20.1.2",
+    "@capacitor/cli": "7.4.2",
     "@ionic/angular-toolkit": "^12.2.0",
     "@types/jasmine": "~5.1.8",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
-    "eslint": "^9.28.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "^50.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsdoc": "^51.4.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "~5.7.1",
+    "jasmine-core": "~5.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.15",
+    "prettier-plugin-packagejson": "^2.5.18",
     "typescript": "~5.8.3"
   },
   "description": "An Ionic project"
