--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^7.3.0",
-    "@capacitor/core": "^7.3.0",
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@capacitor/docgen": "^0.3.0",
-    "@capacitor/ios": "^7.3.0",
+    "@capacitor/ios": "^7.4.2",
     "@commitlint/config-conventional": "^19.8.1",
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
@@ -60,18 +60,19 @@
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.3",
-    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "commitlint": "^19.8.1",
     "eslint": "^8.57.0",
     "husky": "^9.1.7",
-    "prettier": "^3.5.3",
-    "prettier-plugin-java": "^2.6.8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-java": "^2.7.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.15",
+    "prettier-plugin-packagejson": "^2.5.18",
     "rimraf": "^6.0.1",
-    "rollup": "^4.41.1",
-    "semantic-release": "^24.2.5",
+    "rollup": "^4.45.1",
+    "semantic-release": "^24.2.7",
     "swiftlint": "^2.0.0",
     "typescript": "~4.1.5"
   },
