--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,7 +4,21 @@
   ],
   "plugins": [
     ["@semantic-release/commit-analyzer"],
-    ["@semantic-release/release-notes-generator"],
+    ["@semantic-release/release-notes-generator", {
+      "preset": "conventionalcommits",
+      "presetConfig": {
+        "types": [
+          {
+            "type": "feat",
+            "section": "Features"
+          },
+          {
+            "type": "fix",
+            "section": "Bug Fixes"
+          }
+        ]
+      }
+    }],
     ["@semantic-release/changelog"],
     ["@semantic-release/npm"],
     ["@semantic-release/github"],
