--- a/example-app/package.json
+++ b/example-app/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "format": "prettier --write \"src/**/*.{ts,js,html,scss,css,json}\""
   },
   "private": true,
   "dependencies": {
