--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^7.4.2",
-    "@capacitor/core": "^7.4.2",
-    "@capacitor/docgen": "^0.3.0",
-    "@capacitor/ios": "^7.4.2",
+    "@capacitor/android": "^8.0.0",
+    "@capacitor/core": "^8.0.0",
+    "@capacitor/docgen": "^0.3.1",
+    "@capacitor/ios": "^8.0.0",
     "@commitlint/config-conventional": "^19.8.1",
     "@ionic/eslint-config": "^0.4.0",
     "@ionic/prettier-config": "^4.0.0",
@@ -64,20 +64,20 @@
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "commitlint": "^19.8.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
-    "prettier-plugin-java": "^2.7.3",
+    "prettier-plugin-java": "^2.7.7",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.18",
-    "rimraf": "^6.0.1",
-    "rollup": "^4.45.1",
+    "rimraf": "^6.1.0",
+    "rollup": "^4.53.2",
     "semantic-release": "^24.2.7",
     "swiftlint": "^2.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "@capacitor/core": ">=7.0.0"
+    "@capacitor/core": ">=8.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
