--- a/package.json
+++ b/package.json
@@ -52,27 +52,29 @@
     "@capacitor/core": "^8.0.0",
     "@capacitor/docgen": "^0.3.1",
     "@capacitor/ios": "^8.0.0",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@ionic/eslint-config": "^0.4.0",
+    "@commitlint/config-conventional": "^20.3.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.3",
-    "@semantic-release/npm": "^12.0.2",
-    "@semantic-release/release-notes-generator": "^14.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "commitlint": "^19.8.1",
-    "eslint": "^8.57.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "commitlint": "^20.3.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-java": "^2.7.7",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.18",
-    "rimraf": "^6.1.0",
-    "rollup": "^4.53.2",
-    "semantic-release": "^24.2.7",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-packagejson": "^2.5.20",
+    "rimraf": "^6.1.2",
+    "rollup": "^4.54.0",
+    "semantic-release": "^25.0.2",
     "swiftlint": "^2.0.0",
     "typescript": "^5.9.3"
   },
@@ -81,9 +83,6 @@
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
-  "eslintConfig": {
-    "extends": "@ionic/eslint-config/recommended"
-  },
   "capacitor": {
     "ios": {
       "src": "ios"
