chore(ci): fix semantic release
 Date:      Fri Jan 2 17:49:24 2026 +0100

--- a/package.json
+++ b/package.json
@@ -90,5 +90,10 @@
     "android": {
       "src": "android"
     }
+  },
+  "publishConfig": {
+    "provenance": true,
+    "registry": "https://registry.npmjs.org/",
+    "tag": "latest"
   }
 }
