--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,8 +2,8 @@
   "branches": ["main"],
   "tagFormat": "${version}",
   "plugins": [
-    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
-    ["@semantic-release/release-notes-generator", { "preset": "conventionalcommits" }],
+    ["@semantic-release/commit-analyzer"],
+    ["@semantic-release/release-notes-generator"],
     ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
     ["@semantic-release/npm", { "npmPublish": true }],
     "@semantic-release/github",
